Added a date to the news

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 	  h2 {
       clear: left;
     }
-    
+    span.date {
+      font-size: 12px;
+      color: #cecece;
+    }
     h3 {
       padding-bottom: 0px;
       margin-bottom: 0px;
@@ -134,7 +137,7 @@
     </ul>
     <div id="content">
       <div id="news">
-        <h2>Announcing Lifty</h2>
+        <h2>Announcing Lifty <span class="date">9th of August 2010</span></h2>
         <p>Approximately 3 months ago I was selected as a Google Summer of Code student for the organization 
            École Polytechnique Fédérale de Lausanne (EPFL). I was lucky enough to get two mentors, David Pollak 
            and Timothy Perrett. We've been hard at work on the project since and now three months later we finally 
