--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <h3>Lifty-engine</h3>
         <p>Is a framework that helps you develop SBT processors which generate source files. All you have to do is 
-           mix in a simple trait, implement at least one Template(s) and you're done. </p>
+           mix in a simple trait, implement at least one Template and you're done. </p>
 
         <p>Modularity has been a hight priority for us and Lift-engine has some cool ways to construct templates. 
            Templates can depend on other templates and inject code into templates before being processed by Scalate. </p>
