--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <p>Is a framework that helps you develop SBT processors which generate source files. All you have to do is 
            mix in a simple trait, implement at least one Template and you're done. </p>
 
-        <p>Modularity has been a hight priority for us and Lift-engine has some cool ways to construct templates. 
+        <p>Modularity has been a hight priority for us and Lifty-engine has some cool ways to construct templates. 
            Templates can depend on other templates and inject code into templates before being processed by Scalate. </p>
 
         <p>If you're interested in more information or if you want to try it out this guide will take you through the 
@@ -215,7 +215,7 @@
       <p>Is a framework that helps you develop SBT processors which generate source files. All you have to do is 
          mix in a simple trait, implement at least one Template and you're done. </p>
 
-      <p>Modularity has been a hight priority for us and Lift-engine has some cool ways to construct templates. 
+      <p>Modularity has been a hight priority for us and Lifty-engine has some cool ways to construct templates. 
          Templates can depend on other templates and inject code into templates before being processed by Scalate. </p>
 
       <p>If you're interested in more information or if you want to try it out this guide will take you through the 
