Added a new 'news'

--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
     </ul>
     <div id="content">
       <div id="news">
+		<h2>Lifty 1.6 is out <span class="date">11th of March 2011</span></h2>
+		<p>Lifty 1.6 has just been published. This version includes the following:</p>
+		<ul>	
+			<li>Works on Windows!</li>
+			<li>Templates have been updated to use Scala 2.8.1 and Lift 2.2</li>
+		</ul>
         <h2>Announcing Lifty <span class="date">9th of August 2010</span></h2>
         <p>Approximately 3 months ago I was selected as a Google Summer of Code student for the organization 
            École Polytechnique Fédérale de Lausanne (EPFL). I was lucky enough to get two mentors, David Pollak 
