--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       }
 
       #menu li.first {
-      width: 227px;
+      width: 299px;
       }
 
       #menu li.first h1 {
@@ -108,7 +108,7 @@
 	  <script src="jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
 	  <script type="text/javascript" charset="utf-8">
 	    $('document').ready(function() {
-	    $('#processors, #about, #contributors, #docs').hide();
+	    $('#processors, #about, #contributors').hide();
 
 	    $('#menu li a').bind('click',function() {
       var that = $(this);
@@ -145,14 +145,15 @@
         <li class="first"><h1>Lifty</h1></li>
         <li><a class="selected" href="#news">News</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#processors">Processors</a></li>
-        <li><a href="#docs">Docs</a>
+        <li><a href="#processors">Recipes</a></li>
         <li class="last"><a href="#contributors">Contributors</a></li>
         <div class="clearfix"></div>
       </ul>
       <div id="content">
         <div id="news">
-
+            <h2>Lifty 1.7 is out <span class="date">16th of November 2011</span></h2>
+            <p>This has a been a big rewrite of Lifty. It's now works with SBT 0.11.x and templates/descriptions are 
+               hosted online so it's easier for the community to help maintain the templates. </p>
           <h2>Lifty 1.6.1 is out <span class="date">20th of March 2011</span></h2>
           <p>Lifty 1.6.1 has just been published. This version includes the following:</p>
           <ul>
@@ -219,53 +220,23 @@
         </div>
 
         <div id="processors">
-          <p>The following is a list of all the known processors developed using Lifty-engine. If you have used Lifty, please send an email to lifty.organization at gmail dot com</p>
+          <p>This a list of known recipes for Lifty</p>
           <ul>
             <li>
               <strong>Lifty</strong>
               <p>Lifty generates files associated with the Lift framework. It lets you get started with Lift in less than a minute - depending on your internet connection ;) and helps you be more productive in your daily Lift activities.</p>
-              <p><strong>Site: </strong><a href="http://lifty.github.com/Lifty/" target="_blank">http://lifty.github.com/Lifty/</a> <br><strong>Developer:</strong> Mads Hartmann</p>
+              <p><strong>url: </strong>https://raw.github.com/Lifty/lifty/master/lifty-recipe/lifty.json<br><strong>Developer:</strong> Mads Hartmann</p>
             </li>
           </ul>
         </div>
 
         <div id="about">
-          <p>Lifty adds scaffolding to sbt (Simple Build Tool) and includes templates for Lift including
-            new projects, adding snippets, models, comet actors, and other templates for Lift-base projects.</p>
-
-          <p>Lifty is only built against Scala 2.7.7 (because it depends on sbt) and is published to the <a href="http://www.scala-tools.org" target="_blank">scala-tools</a> repository with the organization-id "org.lifty". The source code is available on <a href="http://www.github.com/lifty" target="_blank">Github</a>.</p>
-
-          <p>Lifty consists of two parts, Lifty-engine and Lifty. </p>
-
-          <h3>Lifty-engine</h3>
-          <p>Is a framework that helps you develop SBT processors which generate source files. All you have to do is
-            mix in a simple trait, implement at least one Template and you're done. </p>
-
-          <p>Modularity has been a hight priority for us and Lifty-engine has some cool ways to construct templates.
-            Templates can depend on other templates and inject code into templates before being processed by Scalate. </p>
-
-          <p>If you're interested in more information or if you want to try it out this guide will take you through the
-            process of creating your first SBT processor using Lifty-enine
-            <a href="http://lifty.github.com/Lifty-engine/#your_first_processor" target="_blank">here</a></p>
-
-          <h3>Lifty</h3>
-
-          <p>This is a SBT processor for generating files associated with the Lift framework. It lets you get started
-            with Lift in less than a minute - depending on your internet connection ;) and helps you be more
-            productive in your daily Lift activities.</p>
-
-          <p>Currently it has declared the following templates: </p>
-          <ul>
-            <li>Snippet: A snippet</li>
-            <li>Mapper: Model class using Mapper</li>
-            <li>Comet: Comet component</li>
-            <li>Layout: An empty layout with a surround tag</li>
-            <li>Project: A Lift project with some functionality to get you started</li>
-            <li>Project-blank: A blank Lift project that uses SBT as it's build system</li>
-            <li>User: Model class implemented using Mapper. It provides basic functionality that would
-              expect from a User</li>
-          </ul>
-          <p>It has been built using Lifty-engine of course.</p>
+          <p>Lifty is a plugin that adds scaffolding to SBT 0.11.x (Simple Build Tool). It's easy to 
+             teach Lifty about new scaffolding templates, you just have to give it the url to recipe and
+             it will download the templates and you're set. See the example below for how to teach it about
+             Lift related tempaltes</p>
+             
+             <pre>lifty learn lift https://raw.github.com/Lifty/lifty/master/lifty-recipe/lifty.json</pre>
           <hr />
           <p>
             <strong>Site</strong>: <a href="http://lifty.github.com/" target="_blank">http://lifty.github.com/</a> <br />
@@ -273,14 +244,6 @@
             <strong>Github org</strong>: <a href="http://github.com/Lifty" target="_blank">http://github.com/Lifty</a> <br />
           </p>
 
-        </div>
-
-        <div id="docs">
-          <p>The following is a list of the documentation that's currently available for Lifty</p>
-          <ul>
-            <li><a href="http://lifty.github.com/Lifty-engine/#your_first_processor" target="_blank">Writing your first processor using Lifty</a></li>
-            <li><a href="api/index.html">API documentation</a></li>
-          </ul>
         </div>
 
         <div id="contributors">
