--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
       </ul>
       <div id="content">
         <div id="news">
+            <h2>Lifty 1.7.1 is out <span class="date">16th of November 2011</span></h2>
+            <p>Small bug fix.</p>
             <h2>Lifty 1.7 is out <span class="date">16th of November 2011</span></h2>
             <p>This has a been a big rewrite of Lifty. It's now works with SBT 0.11.x and templates/descriptions are 
                hosted online so it's easier for the community to help maintain the templates. </p>
