news updated about 1.7.3

--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
       </ul>
       <div id="content">
         <div id="news">
+            <h2>Lifty 1.7.3 is out <span class="date">24th of November 2011</span></h2> 
+            <p>Bug fix for windows users</p>
             <h2>Lifty 1.7.2 is out <span class="date">17th of November 2011</span></h2>
-            <p>Bug fixes</p>
+            <p>Bug fix</p>
             <h2>Lifty 1.7.1 is out <span class="date">16th of November 2011</span></h2>
             <p>Bug fixes</p>
             <h2>Lifty 1.7 is out <span class="date">16th of November 2011</span></h2>
