--- a/Combined+Pages.html
+++ b/Combined+Pages.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 <html manifest="pamflet.manifest">
       <head>
         <title>Lifty — Combined Pages</title>
@@ -12,6 +13,7 @@
         <link type="text/css" media="screen and (min-device-width: 800px), projection" rel="stylesheet" href="css/pamflet-grid.css"></link>
         <link type="text/css" media="screen, projection" rel="stylesheet" href="css/custom.css"></link>
         <script src="js/jquery-1.6.2.min.js"></script>
+        <script src="js/jquery.collapse.js"></script>
         <script src="js/pamflet.js"></script>
         
         <meta charset="utf-8"></meta>
@@ -25,12 +27,16 @@
         <div class="container">
           <div class="span-16 prepend-1 append-1">
             <div class="top nav span-16 title">
-              <span>Lifty</span>
-               — Combined Pages
+              <span>Lifty</span> — Combined Pages
             </div>
           </div>
           <div class="span-16 prepend-1 append-1 contents">
-            <h4>Contents</h4><div><a href="#Lifty">Lifty</a></div><ol class="toc"> <li><div><a href="#Installing+The+Plugin">Installing The Plugin</a></div></li><li><div><a href="#Teaching+Lifty+Recipes">Teaching Lifty Recipes</a></div></li><li><div><a href="#Making+Your+Own+Recipe">Making Your Own Recipe</a></div><ol class="toc"> <li><div><a href="#Creating+Your+Description+File">Creating Your Description File</a></div></li><li><div><a href="#Creating+Your+Templates">Creating Your Templates</a></div></li> </ol></li><li><div><a href="#Existing+Recipes">Existing Recipes</a></div></li><li><div><a href="#Changelog">Changelog</a></div></li> </ol><h1 id="Lifty">Lifty</h1><p>Lifty is a plugin that adds scaffolding to <a  href="href=&quot;https://github.com/harrah/xsbt/&quot;">sbt</a>. By telling Lifty about Recipes you teach it to generate files. The hope is that the Scala community will create recipes for all the different libraries and frameworks to make it easy to get started and be productive whenever your’re working with Scala. 
+            <div class="tocwrapper show">
+      <a class="tochead nav" style="display: none" href="#toc">❦</a>
+      <a name="toc"></a>
+      <h4 class="toctitle">Contents</h4>
+      <div class="tocbody">
+      <div><a href="#Lifty">Lifty</a></div><ol class="toc"> <li><div><a href="#Installing+The+Plugin">Installing The Plugin</a></div></li><li><div><a href="#Teaching+Lifty+Recipes">Teaching Lifty Recipes</a></div></li><li><div><a href="#Making+Your+Own+Recipe">Making Your Own Recipe</a></div><ol class="toc"> <li><div><a href="#Creating+Your+Description+File">Creating Your Description File</a></div></li><li><div><a href="#Creating+Your+Templates">Creating Your Templates</a></div></li> </ol></li><li><div><a href="#Existing+Recipes">Existing Recipes</a></div></li><li><div><a href="#Changelog">Changelog</a></div></li> </ol></div></div><h1 id="Lifty">Lifty</h1><p>Lifty is a plugin that adds scaffolding to <a  href="href=&quot;https://github.com/harrah/xsbt/&quot;">sbt</a>. By telling Lifty about Recipes you teach it to generate files. The hope is that the Scala community will create recipes for all the different libraries and frameworks to make it easy to get started and be productive whenever your’re working with Scala.
 </p><p>If you have any questions then drop by the <a  href="&quot;http://groups.google.com/group/lifty&quot;">Google Group</a> and if you want to have a look at the implementation or open an issue then go to <a  href="&quot;http://github.com/Lifty&quot;">Github</a>.
 </p><h1 id="Installing+The+Plugin">Installing The Plugin</h1><p>Add lifty as a global plugin so you can use it in all of your sbt projects. You do so by adding the following line to your <code>~/.sbt/plugins/build.sbt</code> file
 </p><pre><code>addSbtPlugin(&quot;org.lifty&quot; % &quot;lifty&quot; % &quot;1.7.4&quot;)
