--- a/Contents+in+Depth.html
+++ b/Contents+in+Depth.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 <html manifest="pamflet.manifest">
       <head>
         <title>Lifty — Contents in Depth</title>
@@ -12,6 +13,7 @@
         <link type="text/css" media="screen and (min-device-width: 800px), projection" rel="stylesheet" href="css/pamflet-grid.css"></link>
         <link type="text/css" media="screen, projection" rel="stylesheet" href="css/custom.css"></link>
         <script src="js/jquery-1.6.2.min.js"></script>
+        <script src="js/jquery.collapse.js"></script>
         <script src="js/pamflet.js"></script>
         
         <meta charset="utf-8"></meta>
@@ -28,12 +30,16 @@
         <div class="container">
           <div class="span-16 prepend-1 append-1">
             <div class="top nav span-16 title">
-              <span>Lifty</span>
-               — Contents in Depth
+              <span>Lifty</span> — Contents in Depth
             </div>
           </div>
           <div class="span-16 prepend-1 append-1 contents">
-            <h4>Contents</h4><div><a href="Lifty.html">Lifty</a></div><ol class="toc"> <li><div><a href="Installing+The+Plugin.html">Installing The Plugin</a></div></li><li><div><a href="Teaching+Lifty+Recipes.html">Teaching Lifty Recipes</a></div></li><li><div><a href="Making+Your+Own+Recipe.html">Making Your Own Recipe</a></div><ol class="toc"> <li><div><a href="Creating+Your+Description+File.html">Creating Your Description File</a></div><ul class="outline"> <li> <a href="Creating+Your+Description+File.html#Top+level">Top level </a> </li><li> <a href="Creating+Your+Description+File.html#sources">sources </a> </li><li> <a href="Creating+Your+Description+File.html#arguments">arguments </a> </li><li> <a href="Creating+Your+Description+File.html#templates">templates </a> </li> </ul></li><li><div><a href="Creating+Your+Templates.html">Creating Your Templates</a></div></li> </ol></li><li><div><a href="Existing+Recipes.html">Existing Recipes</a></div><ul class="outline"> <li> <a href="Existing+Recipes.html#Lifty">Lifty </a> </li> </ul></li><li><div><a href="Changelog.html">Changelog</a></div><ul class="outline"> <li> <a href="Changelog.html#Lifty+1.7.4+is+out+-+12th+of+December+2011">Lifty 1.7.4 is out - 12th of December 2011 </a> </li><li> <a href="Changelog.html#Lifty+1.7.3+is+out+-+24th+of+November+2011">Lifty 1.7.3 is out - 24th of November 2011 </a> </li><li> <a href="Changelog.html#Lifty+1.7.2+is+out+-+17th+of+November+2011">Lifty 1.7.2 is out - 17th of November 2011 </a> </li><li> <a href="Changelog.html#Lifty+1.7.1+is+out+-+16th+of+November+2011">Lifty 1.7.1 is out - 16th of November 2011 </a> </li><li> <a href="Changelog.html#Lifty+1.7+is+out+-+16th+of+November+2011">Lifty 1.7 is out - 16th of November 2011 </a> </li><li> <a href="Changelog.html#Lifty+1.6.1+is+out+-+20th+of+March+2011">Lifty 1.6.1 is out - 20th of March 2011 </a> </li><li> <a href="Changelog.html#Lifty+1.6+is+out+-+11th+of+March+2011">Lifty 1.6 is out - 11th of March 2011 </a> </li><li> <a href="Changelog.html#Announcing+Lifty+-+9th+of+August+2010">Announcing Lifty - 9th of August 2010 </a> </li> </ul></li><li class="generated"><div class="current">Contents in Depth</div></li><li class="generated"><div><a href="Combined+Pages.html">Combined Pages</a></div></li> </ol>
+            <div class="tocwrapper show">
+      <a class="tochead nav" style="display: none" href="#toc">❦</a>
+      <a name="toc"></a>
+      <h4 class="toctitle">Contents</h4>
+      <div class="tocbody">
+      <div><a href="index.html">Lifty</a></div><ol class="toc"> <li><div><a href="Installing+The+Plugin.html">Installing The Plugin</a></div></li><li><div><a href="Teaching+Lifty+Recipes.html">Teaching Lifty Recipes</a></div></li><li><div><a href="Making+Your+Own+Recipe.html">Making Your Own Recipe</a></div><ol class="toc"> <li><div><a href="Creating+Your+Description+File.html">Creating Your Description File</a></div></li><li><div><a href="Creating+Your+Templates.html">Creating Your Templates</a></div></li> </ol></li><li><div><a href="Existing+Recipes.html">Existing Recipes</a></div></li><li><div><a href="Changelog.html">Changelog</a></div></li><li class="generated"><div class="current">Contents in Depth</div></li><li class="generated"><div><a href="Combined+Pages.html">Combined Pages</a></div></li> </ol></div></div>
           </div>
         </div>
         <a class="fork nav" href="http://github.com/Lifty/lifty.github.com"><img alt="Fork me on GitHub" src="img/fork.png"></img></a>
