--- a/Teaching+Lifty+Recipes.html
+++ b/Teaching+Lifty+Recipes.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 <html manifest="pamflet.manifest">
       <head>
         <title>Lifty — Teaching Lifty Recipes</title>
@@ -12,6 +13,7 @@
         <link type="text/css" media="screen and (min-device-width: 800px), projection" rel="stylesheet" href="css/pamflet-grid.css"></link>
         <link type="text/css" media="screen, projection" rel="stylesheet" href="css/custom.css"></link>
         <script src="js/jquery-1.6.2.min.js"></script>
+        <script src="js/jquery.collapse.js"></script>
         <script src="js/pamflet.js"></script>
         
         <meta charset="utf-8"></meta>
@@ -28,8 +30,7 @@
         <div class="container">
           <div class="span-16 prepend-1 append-1">
             <div class="top nav span-16 title">
-              <span>Lifty</span>
-               — Teaching Lifty Recipes
+              <span>Lifty</span> — Teaching Lifty Recipes
             </div>
           </div>
           <div class="span-16 prepend-1 append-1 contents">
@@ -42,7 +43,12 @@
 &gt; container:start
 &gt; container:stop
 </code></pre><p>Now point your browser to <code>http://localhost:8080</code>
-</p><h4>Contents</h4><div><a href="Lifty.html">Lifty</a></div><ol class="toc"> <li><div><a href="Installing+The+Plugin.html">Installing The Plugin</a></div></li><li><div class="current">Teaching Lifty Recipes</div></li><li><div><a href="Making+Your+Own+Recipe.html">Making Your Own Recipe</a></div><ol class="toc"> <li><div><a href="Creating+Your+Description+File.html">Creating Your Description File</a></div></li><li><div><a href="Creating+Your+Templates.html">Creating Your Templates</a></div></li> </ol></li><li><div><a href="Existing+Recipes.html">Existing Recipes</a></div></li><li><div><a href="Changelog.html">Changelog</a></div></li><li class="generated"><div><a href="Contents+in+Depth.html">Contents in Depth</a></div></li><li class="generated"><div><a href="Combined+Pages.html">Combined Pages</a></div></li> </ol>
+</p><div class="tocwrapper show">
+      <a class="tochead nav" style="display: none" href="#toc">❦</a>
+      <a name="toc"></a>
+      <h4 class="toctitle">Contents</h4>
+      <div class="tocbody">
+      <div><a href="index.html">Lifty</a></div><ol class="toc"> <li><div><a href="Installing+The+Plugin.html">Installing The Plugin</a></div></li><li><div class="current">Teaching Lifty Recipes</div></li><li><div><a href="Making+Your+Own+Recipe.html">Making Your Own Recipe</a></div><ol class="toc"> <li><div><a href="Creating+Your+Description+File.html">Creating Your Description File</a></div></li><li><div><a href="Creating+Your+Templates.html">Creating Your Templates</a></div></li> </ol></li><li><div><a href="Existing+Recipes.html">Existing Recipes</a></div></li><li><div><a href="Changelog.html">Changelog</a></div></li><li class="generated"><div><a href="Contents+in+Depth.html">Contents in Depth</a></div></li><li class="generated"><div><a href="Combined+Pages.html">Combined Pages</a></div></li> </ol></div></div>
           </div>
         </div>
         <a class="fork nav" href="http://github.com/Lifty/lifty.github.com"><img alt="Fork me on GitHub" src="img/fork.png"></img></a>
