Updated installation guide because I've moved the repo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="span-16 prepend-1 append-1 contents">
-            <h1 id="Lifty">Lifty</h1><p>Lifty is a plugin that adds scaffolding to <a  href="href=&quot;https://github.com/harrah/xsbt/&quot;">sbt</a>. By telling Lifty about Recipes you teach it to generate files. The hope is that the Scala community will create recipes for all the different libraries and frameworks to make it easy to get started and be productive whenever your’re working with Scala.
+            <h1 id="Lifty">Lifty</h1><p>Lifty is a plugin that adds scaffolding to <a  href="href=&quot;https://github.com/harrah/xsbt/&quot;">sbt</a>. By telling Lifty about Recipes you teach it to generate files. The hope is that the Scala community will create recipes for all the different libraries and frameworks to make it easy to get started and be productive whenever your’re working with Scala.aaa
 </p><p>If you have any questions then drop by the <a  href="&quot;http://groups.google.com/group/lifty&quot;">Google Group</a> and if you want to have a look at the implementation or open an issue then go to <a  href="&quot;http://github.com/Lifty&quot;">Github</a>.
 </p><div class="tocwrapper show">
       <a class="tochead nav" style="display: none" href="#toc">❦</a>
